# zzetzMain

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DOCUMENTATION.md  E2E_TEST_CASES.md  IMPLEMENT.md  Makefile  OPERATIONS.md  PLANS.md  README.md  SESSION_CONTEXT.md
apple/: DESIGN.md  README.md
backend/: pyproject.toml  run.py
backend/app/: __init__.py  config.py  db.py  db_migrations.py  models.py  schemas.py
backend/app/prompts/: chat_system.md  content.md  extract_summary.md  features.md  positioning.md  render_final_document.md  render_prd.md  style.md  system.md  template.md  welcome_initial.md  welcome_revision.md
backend/app/routes/: admin.py  documents.py  health.py  messages.py  sessions.py  uploads.py
backend/app/services/: admin_auth.py  document_renderer.py  intake_state_machine.py  llm_client.py  llm_orchestrator.py  queue_manager.py  session_lifecycle.py  storage.py  summary_builder.py
backend/tests/: test_admin_api.py  test_db_migrations.py  test_health.py  test_llm_orchestrator.py  test_queue_and_generation.py  test_sessions_api.py  test_uploads_api.py
docs/superpowers/plans/: 2026-04-08-personal-website-mvp.md  2026-04-09-chat-first-intake-redesign.md  2026-04-09-chat-first-post-launch-fixes.md
docs/superpowers/specs/: 2026-04-08-personal-site-homepage-and-intake-design.md  2026-04-09-chat-first-intake-redesign.md
frontend/: index.html  package.json  tsconfig.tsbuildinfo
frontend/src/: app.tsx  styles.css
frontend/src/lib/: api.ts  types.ts
frontend/src/routes/: admin-page.tsx  home-page.tsx  (+1 more)
scripts/: deploy-zzetz-cn.sh
(+22 files in other folders)
