[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zzetz-main-backend"
version = "0.0.1"
description = "Backend app for personal site intake MVP"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.1.0",
  "Flask-Cors>=5.0.0",
  "SQLAlchemy>=2.0.40",
  "httpx>=0.28.1",
  "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["app"]
